--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/7J647/Employee-Tracker/issues"
   },
-  "homepage": "https://github.com/7J647/Employee-Tracker#readme"
+  "homepage": "https://github.com/7J647/Employee-Tracker#readme",
+  "dependencies": {
+    "inquirer": "^7.3.3",
+    "mysql": "^2.18.1"
+  }
 }
